--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 layout: default
 title: Jing Xiang's Blog ←_←
 ---
-    <header class="header">
-      <a>Jing Xiang's Blog ←_← </a>
-    </header>
+
   	<div class="content">
       <div class="sidebar">
         <a>
           <img src="images/logo.png"></img>
         </a>
         <p>
-          "want to contact me"
+          want to contact me?
           <br>
           <strong>jingxiang70939@gmail.com</strong>
         </p>
